Converted Research and Plan Document to PDF and finalized the three html pages.  Fixed errors identified in HTML Validator

--- a/advisory-board.html
+++ b/advisory-board.html
@@ -13,6 +13,7 @@
 <body>
   <header>
     <img src="images/header.png" alt="Florida Energy Systems Consortium Logo">
+    <!-- Each main nav element should have pull down menus to remove the side navs on the current site -->
     <nav>
         <a href="index.html">Home</a>
         <a href="energy-industry.html">Energy Industry</a>
@@ -22,9 +23,11 @@
 
   <main>
     <section id="banner-message">
-      <p>Please join us at the Florida Energy Submit</p>
+      <h5>Please join us at the Florida Energy Submit</h5>
       <p>Oct. 18-20, 2017 in Fort Lauderdale</p>
     </section>
+    
+    <!--  Format college links to use logos, maybe consider putting somewhere else on the page -->
     <aside id="partner-universities">
       <h3>Partner Universities</h3>
       <div id="university-logos">
@@ -42,6 +45,7 @@
         <a href="https://floridapoly.edu/">Florida Polytechnic</a>
       </div>
     </aside>
+    <!-- Format images and setup on click to popout bio information -->
     <section>
       <h1>Advisory Board</h1>
       
